Add search bar to webbApp

--- a/src/app/github-form/github-form.component.html
+++ b/src/app/github-form/github-form.component.html
@@ -1,3 +1,4 @@
 <div id="searchForm">
-  <input type="text" placeholder="Search" id="searchBar">
+  <img src="../favicon.ico" alt="github" float="left" max width="2.4%">
+  <input type="text" placeholder="Search..." id="searchBar">
 </div>
