--- a/src/app/github-profile/github-profile.component.html
+++ b/src/app/github-profile/github-profile.component.html
@@ -1,3 +1,34 @@
-<p>
-  github-profile works!
-</p>
+<div *ngIf = "profile">
+  <div class = "panel panel-default">
+    <div class = "panel-heading">
+      {{ profile.name }}<br><small>({{ profile.login }})</small>
+      <span *ngIf = "profile.company">, Works at {{ profile.company }}</span>
+      {{ profile.location }}
+    </div>
+    <div class = "panel-body">
+      <div class = "row">
+        <div class = "col-md-3">
+          <img src = "{{ profile.avatar_url }}" class = "img-circle img-responsive" alt = "Profile Image">
+        </div>
+        <div class = "col-md-5">
+          <ul class = "list-group">
+            <li class = "list-group-item" *ngIf = "profile.bio">{{ profile.bio }}</li>
+            <li class = "list-group-item" *ngIf = "profile.hireable">Available for hire</li>
+            <li class = "list-group-item" *ngIf = "profile.blog"><a href = "{{ profile.blog }}" target = "blank">{{ profile.blog }}</a></li>
+            <li class = "list-group-item" *ngIf = "profile.email"><a href = "{{ profile.email }}" target = "blank">{{ profile.email }}</a></li>
+          </ul>
+        </div>
+        <div class = "col-md-4">
+          <div>
+            <p>
+              <span class = "label label-default">Repositories {{ profile.public_repos }}</span>
+              <span class = "label label-default">Stars {{ profile.public_gists }}</span>
+              <span class = "label label-default">Followers {{ profile.followers }}</span>
+              <span class = "label label-default">Following {{ profile.following }}</span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
