--- a/src/app/github-form/github-form.component.html
+++ b/src/app/github-form/github-form.component.html
@@ -1,4 +1,6 @@
-<div id="searchForm">
-  <img src="../favicon.ico" alt="github" float="left" max width="2.4%">
-  <input type="text" placeholder="Search..." id="searchBar">
-</div>
+<form>
+  <div class = "form-group" style = "padding : 2.5% 2.5% 1.25% 2.5%">
+    <img src="../favicon.ico" float = "left" max width = "46%">
+    <input type = "text" placeholder = "  Search..." id = "searchBar">
+  </div>
+</form>
