--- a/src/app/github-profile/github-profile.component.html
+++ b/src/app/github-profile/github-profile.component.html
@@ -1,6 +1,6 @@
 <form action="" class = "search-form">
   <div class = "form-group" style = "padding : 2.5% 2.5% 1.25% 2.5%">
-    <img src="../gitCon.ico" float = "left" max width = "46%" id = "iconImg">
+    <img src="../assets/gitCon.ico" float = "left" max width = "46%" id = "iconImg">
     <input type = "text" class="form-control" placeholder = " Search..." id = "searchBar" [(ngModel)] = "username" name = "username" (keyup) = "findProfile()">
   </div>
 </form>
